--- a/app/src/main/res/layout/activity_frame.xml
+++ b/app/src/main/res/layout/activity_frame.xml
@@ -11,4 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:tabIndicator="@null"
+        app:tabBackground="@drawable/selector_tab"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingHorizontal="12dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
